Added create task, delete task and translations

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -11,7 +11,9 @@
         "switchToLightMode": "Switch to light mode",
         "collapse": "Collapse",
         "expand": "Expand",
-        "toggleNavigation": "Toggle navigation"
+        "toggleNavigation": "Toggle navigation",
+        "cancel": "Cancel",
+        "add": "Add"
     },
     "task": {
         "status": {
@@ -19,6 +21,13 @@
             "IN_PROGRESS": "In progress",
             "COMPLETED": "Completed",
             "CANCELLED": "Cancelled"
-        }
+        },
+        "statusText": "Status",
+        "setStatus": "Set Status",
+        "addNew": "Add a new task",
+        "name": "Name",
+        "description": "Description",
+        "startDate": "Start date",
+        "endDate": "End date"
     }
 }
